# dolifact

./: .gitignore  DolibarrFacturacion.spec  README.md  dolibarr_export.py  main.py  pyproject.toml  requirements.txt
